--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,23 @@
     box-sizing: border-box;
 }
 html{
-    font-size: 62.5rem;
-    
+    font-size: 62.5%;
+
+}
+body {
+	background: #EEF3F5;
+	font-family: 'Open Sans', sans-serif;
+    font-size: 1.6rem;
+
+}
+#root {
+	display: flex;
+	justify-content: center;
+}
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
